# tagged_t

./: .gitignore  CMakeLists.txt  Makefile  README.md
examples/: main.cpp
include/: tagged_t.h
src/: main.cpp
tests/: test_tagged.cpp
